# cpp-string-matching

./: .gitignore  README.md
src/: Automaton.cpp  Automaton.h  CMakeLists.txt  StringMatching.cpp  StringMatching.h  main.cpp
src/smart-pointers/: Exceptions.cpp  Exceptions.h  SmartPointer.cpp  SmartPointer.h
